--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -2,7 +2,7 @@
 
 # API URL (backend server)
 # For local development:
-VITE_API_URL=https://naplan-app.onrender.com
+VITE_API_URL=https://naplan-app.onrender.com/api
 
 # For production (after deploying backend):
 # VITE_API_URL=https://your-backend-url.render.com/api
