--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
   "outputDirectory": "frontend/dist",
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "https://naplan-app.onrender.com/api/:path*"
+    },
+    {
       "source": "/(css|js|img|assets|fonts)/(.*)",
       "destination": "/$1/$2"
     },
