--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.6.2",
-    "zustand": "^4.4.7",
-    "react-hook-form": "^7.49.2",
-    "recharts": "^2.10.3",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.17.0",
     "lucide-react": "^0.303.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^6.21.1",
+    "recharts": "^2.10.3",
+    "tailwind-merge": "^2.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
